fix padding to center align the device

--- a/components/HomePage.module.css
+++ b/components/HomePage.module.css
@@ -8,7 +8,9 @@
 */
 .siteWindowContainer {
   height: 100vh;
-  padding: 10rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: auto;
 }
 
